// ============================================================================
//  asima — database schema (DBML)
// ----------------------------------------------------------------------------
//  Db Diagram Link: http://dbdiagram.io/d/Asima-Database-Schema-Design-69fc0eba7a923b94723d26bb
//
//  Status legend per table:
//    [v0]  — already in code, migration exists
//    [v1]  — designed in ADR / plan, not yet migrated
//    [tt]  — proposed for the time-tracking module (this file)
//
//  Conventions (per asima-backend/CLAUDE.md):
//    - snake_case column names
//    - timestamptz for all datetimes
//    - audit fields (created_by/updated_by/deleted_by) on every business entity
//    - soft delete via deleted_at; permissions are the only exception
//      (seed-managed configuration, not user data)
//    - single-tenant — no organization_id
// ============================================================================


// ---------- Identity foundation -------------------------------------------- //

Table permissions {
  id            integer       [pk, increment]
  code          varchar(100)  [not null, unique, note: "RESOURCE:Action — e.g. USER:Create, LEAVE:Approve"]
  resource      varchar(50)   [not null, note: "USER, ROLE, PERMISSION, LEAVE, TIME, ..."]
  action        varchar(30)   [not null, note: "Create | View | Update | Delete | Approve | ..."]
  description   varchar(255)
  created_at    timestamptz   [not null]
  updated_at    timestamptz   [not null]

  Indexes {
    resource
  }

  Note: '[v0] Seed-managed catalog. Source of truth: src/database/seeds/data/permissions.json. No soft delete, no audit FK — predates users.'
}

Table roles {
  id            integer       [pk, increment]
  name          varchar(50)   [not null, unique, note: "SUPER_ADMIN | HR_ADMIN | PROJECT_MANAGER | TECHNICAL_DIRECTOR | EMPLOYEE"]
  description   varchar(255)
  created_by    integer       [ref: > users.id]
  updated_by    integer       [ref: > users.id]
  deleted_by    integer       [ref: > users.id]
  created_at    timestamptz   [not null]
  updated_at    timestamptz   [not null]
  deleted_at    timestamptz

  Note: '[v0] Global capability buckets. Drives @Permissions(...) gates. PM and TD ship with empty permission lists in v0; LEAVE:* lands with the leave module.'
}

Table role_permissions {
  role_id        integer  [ref: > roles.id, not null]
  permission_id  integer  [ref: > permissions.id, not null]

  Indexes {
    (role_id, permission_id) [pk]
  }

  Note: '[v0] Many-to-many join. Idempotent seed maintains the SUPER_ADMIN/HR_ADMIN/ADMIN row sets.'
}


// ---------- Users ---------------------------------------------------------- //

Table users {
  id              integer       [pk, increment]
  email           varchar(255)  [not null, unique, note: "Lowercase-normalized at service layer"]
  password_hash   varchar(255)  [not null, note: "bcryptjs. select: false on the entity — opt-in via findByEmailWithCredentials"]
  first_name      varchar(100)  [not null]
  last_name       varchar(100)  [not null]
  title           varchar(100)  [note: "Freeform display string (e.g. 'Senior PM', 'Acting TD'). NEVER drives auth or routing."]
  role_id         integer       [ref: > roles.id, not null]
  system_admin    boolean       [not null, default: false, note: "true short-circuits PermissionsGuard. Reserved for ops."]
  is_active       boolean       [not null, default: true]
  last_login_at   timestamptz
  created_by      integer       [ref: > users.id]
  updated_by      integer       [ref: > users.id]
  deleted_by      integer       [ref: > users.id]
  created_at      timestamptz   [not null]
  updated_at      timestamptz   [not null]
  deleted_at      timestamptz

  Indexes {
    role_id
    is_active
  }

  Note: '[v1] Lands in Task 4 of the plan. Self-referential audit FKs are nullable to allow seeding the first super-admin.'
}


// ---------- Approval routing (ADR 0001) ------------------------------------ //
//
//  Distinct from `roles`: a user's role says they CAN call LEAVE:Approve
//  globally; this table says whether they're the right approver for THIS
//  employee's THIS request. Versioned via effective_at / ended_at so past
//  requests stay bound to whoever approved at the time.
//
//  Examples:
//    - Standard employee:  (emp, 1, td_id), (emp, 2, pm_id)
//    - Direct-to-PM:       (emp, 1, pm_id)
//    - TD's own leave:     (td, 1, pm_id)
//    - One-step collapse:  (emp, 1, person_id)  // when one user fills both slots
//
// -------------------------------------------------------------------------- //

Table approval_chains {
  id            integer       [pk, increment]
  employee_id   integer       [ref: > users.id, not null, note: "The user whose request is being routed"]
  step          integer       [not null, note: "1 = first approver (TD), 2 = second (PM), 3+ for extended chains"]
  approver_id   integer       [ref: > users.id, not null, note: "The user authorized to approve at this step"]
  effective_at  timestamptz   [not null, default: `now()`]
  ended_at      timestamptz   [note: "NULL = currently active. Set when reassigned or when employee leaves."]
  created_by    integer       [ref: > users.id]
  updated_by    integer       [ref: > users.id]

  Indexes {
    (employee_id, step, effective_at) [unique]
    (employee_id, ended_at) [note: "Filter active rows fast"]
    approver_id
  }

  Note: '[v1] Lands with the leave module, NOT v0. Same table backs leave, OT, expense, and any future multi-level approval flow.'
}


// ============================================================================
//  Time-tracking module (proposed) — DTR / time-in time-out sheet
// ----------------------------------------------------------------------------
//  Design choice: one row per IN/OUT segment (not one row per day).
//
//  Why: a day can have morning + afternoon + overtime + a forgotten-punch
//  correction. A row-per-segment model handles all of these without nullable
//  AM/PM/OT columns, and DTR aggregation is a SUM/GROUP BY view.
//
//  Half-day, broken shifts, multi-segment OT all fit naturally. A daily DTR
//  display is generated by grouping rows by (employee_id, work_date).
// ============================================================================


Enum time_period {
  morning
  afternoon
  overtime
  other        [note: "Off-cycle work, on-call, etc."]
}

Enum time_source {
  manual       [note: "Self-entered via web UI"]
  biometric    [note: "Hardware punch (fingerprint, RFID)"]
  admin        [note: "Entered on behalf of employee by HR"]
  correction   [note: "Created via approved correction request"]
}

Enum time_entry_status {
  open         [note: "Time-in recorded, time-out not yet — actively clocked in"]
  pending      [note: "Both punches recorded, awaiting day-close / lock"]
  confirmed    [note: "Day closed, included in DTR"]
  locked       [note: "Past payroll cutoff — only HR override can edit"]
}

Table time_entries {
  id            integer            [pk, increment]
  employee_id   integer            [ref: > users.id, not null]
  work_date     date               [not null, note: "The date the segment counts toward (handles overnight shifts)"]
  period        time_period        [not null]
  time_in       timestamptz        [not null]
  time_out      timestamptz        [note: "NULL while still clocked in (status=open)"]
  source        time_source        [not null]
  status        time_entry_status  [not null, default: 'open']
  notes         varchar(500)
  created_by    integer       [ref: > users.id]
  updated_by    integer       [ref: > users.id]
  deleted_by    integer       [ref: > users.id]
  created_at    timestamptz   [not null]
  updated_at    timestamptz   [not null]
  deleted_at    timestamptz

  Indexes {
    (employee_id, work_date) [note: "DTR query: all of an employee's segments for a day"]
    (employee_id, status)    [note: "Find anyone currently clocked in"]
    work_date                [note: "HR queries across all employees for a given date"]
  }

  Note: '[tt] One row per IN/OUT segment. Aggregate to DTR view by GROUP BY (employee_id, work_date).'
}


Table work_schedules {
  id              integer       [pk, increment]
  employee_id     integer       [ref: > users.id, not null]
  day_of_week     integer       [not null, note: "0=Sunday, 1=Monday, ..., 6=Saturday"]
  expected_in     time          [not null, note: "e.g. 08:00:00 — used to flag tardiness"]
  expected_out    time          [not null, note: "e.g. 17:00:00"]
  break_minutes   integer       [not null, default: 60]
  effective_from  date          [not null]
  effective_to    date          [note: "NULL = current. Versioned so historical DTRs respect the schedule that was active at the time."]
  created_by    integer       [ref: > users.id]
  updated_by    integer       [ref: > users.id]
  created_at    timestamptz   [not null]
  updated_at    timestamptz   [not null]

  Indexes {
    (employee_id, day_of_week, effective_from)
    (employee_id, effective_to) [note: "Filter active schedule rows"]
  }

  Note: '[tt] Optional — only needed when the system flags lates / undertime. Skip in MVP if attendance is purely descriptive.'
}


Enum correction_status {
  pending
  approved
  rejected
  cancelled    [note: "Withdrawn by the employee before approval"]
}

Enum correction_type {
  add          [note: "Forgot to clock in/out — create a new time_entry"]
  edit         [note: "Wrong time on an existing entry"]
  delete       [note: "Accidental duplicate / wrong date"]
}

Table time_correction_requests {
  id                    integer            [pk, increment]
  employee_id           integer            [ref: > users.id, not null]
  time_entry_id         integer            [ref: > time_entries.id, note: "NULL when type=add (no existing row to point at yet)"]
  type                  correction_type    [not null]
  work_date             date               [not null]
  requested_period      time_period
  requested_time_in     timestamptz
  requested_time_out    timestamptz
  reason                varchar(500)       [not null]
  status                correction_status  [not null, default: 'pending']
  current_step          integer            [note: "Tracks where the request sits in approval_chains for this employee"]
  current_approver_id   integer            [ref: > users.id, note: "Snapshot at advancement time so ADR-0001 history rule holds"]
  resolved_at           timestamptz
  resolved_by           integer            [ref: > users.id]
  resolution_notes      varchar(500)
  created_by    integer       [ref: > users.id]
  updated_by    integer       [ref: > users.id]
  created_at    timestamptz   [not null]
  updated_at    timestamptz   [not null]

  Indexes {
    (employee_id, status)
    (current_approver_id, status) [note: "Approver inbox query"]
    work_date
  }

  Note: '[tt] Routes through approval_chains exactly the same way leave will. On approval, the service mutates time_entries (insert/update/soft-delete) inside one transaction.'
}
